--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </div>
 
     <!-- 背景音乐 -->
-    <audio id="bg-music" loop>
+    <audio id="back" loop>
         <source src="back.mp3" type="audio/mp3">
     </audio>
 
