--- a/index.html
+++ b/index.html
@@ -78,6 +78,40 @@
             font-size: 2rem;
             color: red;
         }
+
+        /* 弹窗样式 */
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal-content {
+            background-color: white;
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+        }
+
+        .modal button {
+            margin-top: 20px;
+            background-color: #4CAF50;
+            color: white;
+            font-size: 1rem;
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+        }
+
+        .modal button:hover {
+            background-color: #45a049;
+        }
     </style>
 </head>
 <body>
@@ -98,6 +132,29 @@
         您的浏览器不支持音频元素。
     </audio>
 
+    <!-- 游戏规则弹窗 -->
+    <div id="gameRuleModal" class="modal">
+        <div class="modal-content">
+            <h2>游戏规则</h2>
+            <p>1. 记忆匹配游戏是一种卡片配对游戏。</p>
+            <p>2. 游戏开始时，卡片会随机显示，您需要在规定时间内匹配相同的卡片。</p>
+            <p>3. 每次配对正确将获得10分，成功配对所有卡片后游戏结束。</p>
+            <p>4. 时间结束后，游戏也会结束。</p>
+            <button id="startGameBtn">开始游戏</button>
+        </div>
+    </div>
+
+    <!-- 成功弹窗 -->
+    <div id="winModal" class="modal">
+        <div class="modal-content">
+            <h2>恭喜！你赢得了500韩元！</h2>
+            <p>点击下面的链接领取奖励。</p>
+            <a href="https://your-reward-link.com" target="_blank">
+                <button>领取奖励</button>
+            </a>
+        </div>
+    </div>
+
     <script>
         const board = document.getElementById('board');
         const scoreDisplay = document.getElementById('score');
@@ -107,6 +164,9 @@
         const playButton = document.getElementById('playMusic');
         const muteButton = document.getElementById('mute');
         const bgMusic = document.getElementById('back');
+        const gameRuleModal = document.getElementById('gameRuleModal');
+        const startGameBtn = document.getElementById('startGameBtn');
+        const winModal = document.getElementById('winModal');
         
         let cards = [];
         let flippedCards = [];
@@ -127,6 +187,22 @@
             'images/7.jpg', 
             'images/8.jpg'
         ];
+
+        // 显示游戏规则弹窗
+        window.onload = function() {
+            gameRuleModal.style.display = "flex";
+        };
+
+        // 开始游戏按钮
+        startGameBtn.addEventListener('click', function() {
+            gameRuleModal.style.display = "none"; // 关闭游戏规则弹窗
+            startGame();
+        });
+
+        function startGame() {
+            createBoard();
+            startTimer();  // 游戏加载时启动计时器
+        }
 
         function createBoard() {
             let cardDeck = [...cardValues, ...cardValues];
@@ -181,7 +257,10 @@
 
                 if (matchedPairs === cardValues.length) {
                     clearInterval(gameTimer);  // 游戏完成时停止计时器
-                    setTimeout(() => alert('你赢了！'), 500);
+                    setTimeout(() => {
+                        // 游戏结束时显示赢得奖励的弹窗
+                        winModal.style.display = "flex";
+                    }, 500);
                 }
             } else {
                 setTimeout(() => {
@@ -223,30 +302,7 @@
             updateScore();
             gameOverDisplay.textContent = '';
             timerDisplay.textContent = `时间: 30秒`;
-            createBoard();
-            if (!gameInProgress) startTimer();
         }
-
-        // 播放音乐按钮功能
-        playButton.addEventListener('click', function() {
-            bgMusic.play();
-        });
-
-        // 静音按钮功能
-        muteButton.addEventListener('click', function() {
-            if (bgMusic.muted) {
-                bgMusic.muted = false;
-                muteButton.textContent = '静音';
-            } else {
-                bgMusic.muted = true;
-                muteButton.textContent = '取消静音';
-            }
-        });
-
-        restartButton.addEventListener('click', restartGame);
-
-        createBoard();
-        startTimer();  // 游戏加载时启动计时器
     </script>
 </body>
 </html>
